--- a/Joyce/src/main/resources/templates/tools/createCode/getDb.html
+++ b/Joyce/src/main/resources/templates/tools/createCode/getDb.html
@@ -48,7 +48,7 @@
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="driverName">驱动包地址</label>
                     <div  class="col-sm-4 ">
-                        <input class="form-control" id="driverName" type="text" name="driverName" placeholder="请输入驱动包地址(如:com.xx.xx.driver)"  value="com.mysql.cj.jdbc.Driver"  required="required"/>
+                        <input class="form-control" id="driverName" type="text" name="driverName" placeholder="请输入驱动包(如:com.mysql.cj.jdbc.Driver)"    required="required"/>
                     </div>
                 </div>
                 <div class="form-group ">
@@ -60,7 +60,7 @@
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="databaseType">数据库类型</label>
                     <div  class="col-sm-4 ">
-                        <input class="form-control" id="databaseType" type="text" name="databaseType" placeholder="请输入数据库类型(如：mysql)" value="mysql"  required="required"/>
+                        <input class="form-control" id="databaseType" type="text" name="databaseType" placeholder="请输入数据库类型(如：mysql)"  required="required"/>
                     </div>
                 </div>
                 <div class="form-group ">
