--- a/Joyce/src/main/resources/templates/user/websocketPage.html
+++ b/Joyce/src/main/resources/templates/user/websocketPage.html
@@ -30,10 +30,9 @@
 			</div>
 
 			<div id="chatview" class="p1">
-				<div id="profile">
-				</div>
-				<div id="chat-messages">
-				</div>
+				<div id="profile"></div>
+
+				<div id="chat-messages"></div>
 
 				<div id="sendmessage">
 					<input id="messageText" type="text" placeholder="Send message..." />
@@ -46,34 +45,34 @@
 
 </div>
 <input class="title" type="hidden" value="websocket">
-<input id="to" type="text">
+<input id="to" type="hidden">
 <input id="tosrc" type="hidden">
 <input id="websocketUrlPrefix" type="hidden" th:value="${websocketUrlPrefix}">
+
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
 <script type="text/javascript" th:src="@{/static/js/websocket/websocket.js}"></script>
 <script type="text/javascript">
 	//连接对象.
 	var websocket = null;//websocketUrlPrefix
 	var id = $("#id").val();
+	var fileUrl = $('#fileUrl').val();
 	//判断当前的浏览器是否支持websocket.
 	if ("WebSocket" in window) {
 		var websocketUrlPrefix = $("#websocketUrlPrefix").val();
 		websocket = new WebSocket("ws://" + websocketUrlPrefix + "/" + id);
 	} else {
-		alert("Not support websocket");
+		console.log("Not support websocket");
 	}
 
 	//连接发生错误的回调方法
 	websocket.onerror = function(){
-		setMessageInnerHTML("error");
+		console.log("error");
 	};
 
-
 	//连接成功建立的回调方法
-	websocket.onopen = function(event){
-		setMessageInnerHTML("open");
+	websocket.onopen = function(){
+		console.log("open");
 	}
-
 
 	//接收到消息的回调方法
 	websocket.onmessage = function(event){
@@ -95,46 +94,35 @@
 			if (!isBlank(obj.textMessage)){
 				tm=obj.textMessage;
 			}
-			var fileUrl = $('#fileUrl').val();
-		/*	if (getSessionUserId==returnData.id){
-				chatHtml = chatHtml+ "<div class=\"message\">" ;
-			}else {
-				chatHtml = chatHtml+ "<div class=\"message right\">" ;
-			}*/
-			chatHtml =  "<div class=\"message right\">"+
+
+			let chatHtml =  "<div class=\"message right\">"+
 					"<img src=\""+fileUrl+"\" />" +
 					"<div class=\"bubble\">" +
 					tm +
 					"</div></div>";
-			/*$('#chat-messages').append(chatHtml);*/
 			setMessageInnerHTML(chatHtml);
 		}
 	}
-
 
 	//连接关闭的回调方法
 	websocket.onclose = function(){
 		setMessageInnerHTML("close");
 	}
 
-
 	//监听窗口关闭事件，当窗口关闭时，主动去关闭websocket连接，防止连接还没断开就关闭窗口，server端会抛异常。
 	window.onbeforeunload = function(){
 		websocket.close();
 	}
 
-
 	//将消息显示在网页上
 	function setMessageInnerHTML(innerHTML){
-		$('#messageText').innerHTML += innerHTML ;
+		$('#chat-messages')[0].innerHTML += innerHTML ;
 	}
-
 
 	//关闭连接
 	function closeWebSocket(){
 		websocket.close();
 	}
-
 
 	//发送消息
 	function send(){
@@ -143,17 +131,31 @@
 		if (to==null){
 			to = "All";
 		}
-		/*var  innerHTML = "<div><p>我:"+text+"</p></div>"
-		setMessageInnerHTML(innerHTML);*/
+		let innerHTML =  "<div class=\"message right\">"+
+				"<img src=\""+fileUrl+"\" />" +
+				"<div class=\"bubble\">" +
+				text +
+				"</div></div>";
+		setMessageInnerHTML(innerHTML);
 		saveInfo(to,text);
-		var messages={
+		toBut($('#chat-messages')[0]);
+    	var messages={
 			id:$("#id").val(),
 			to:to,
 			message:text
 		}
 		websocket.send(JSON.stringify(messages));
-		$('#messageText').attr('text','');
+		$('#messageText').val("");
 	}
+
+	$("#messageText").keydown(function (e){
+		let code = e.keyCode || e.which || e.charCode;
+		if (code == 13){
+			send();
+		}
+
+	});
+
 </script>
 
 
