--- a/Joyce/src/main/resources/templates/user/websocketPage.html
+++ b/Joyce/src/main/resources/templates/user/websocketPage.html
@@ -53,7 +53,8 @@
 <script type="text/javascript" th:src="@{/static/js/websocket/websocket.js}"></script>
 <script type="text/javascript">
 	//连接对象.
-	var websocket = null;//websocketUrlPrefix
+	//websocketUrlPrefix
+	var websocket = null;
 	var id = $("#id").val();
 	var fileUrl = $('#fileUrl').val();
 	//判断当前的浏览器是否支持websocket.
@@ -71,37 +72,21 @@
 
 	//连接成功建立的回调方法
 	websocket.onopen = function(){
-		console.log("open");
 	}
 
 	//接收到消息的回调方法
 	websocket.onmessage = function(event){
-		if (event.date!=null){
-			var obj =JSON.parse(event.data);
-			var ou = "";
-			var mt = "";
-			var fi = "";
-			var tm = "";
-			if (!isBlank(obj.onlineUsers)){
-				ou="当前在线人数:"+obj.onlionUsers+":";
-			}
-			if (!isBlank(obj.messageType)){
-				mt=obj.messageType+";        ";
-			}
-			if (!isBlank(obj.fromuserId)){
-				fi=obj.fromuserId+":";
-			}
-			if (!isBlank(obj.textMessage)){
-				tm=obj.textMessage;
-			}
-
-			let chatHtml =  "<div class=\"message right\">"+
-					"<img src=\""+fileUrl+"\" />" +
-					"<div class=\"bubble\">" +
-					tm +
-					"</div></div>";
-			setMessageInnerHTML(chatHtml);
+		var data =  JSON.parse(event.data);
+		let clazz = "<div class=\"message right\">";
+		if (data.userAId!=$("#id").val()){
+			 clazz = "<div class=\"message\">";
 		}
+		let innerHTML = clazz+
+				"<img src=\""+data.aFileUrl+"\" />" +
+				"<div class=\"bubble\">" + data.content +
+				"</div></div>"
+		console.log(innerHTML);
+		setMessageInnerHTML(innerHTML);
 	}
 
 	//连接关闭的回调方法
@@ -131,21 +116,17 @@
 		if (to==null){
 			to = "All";
 		}
-		let innerHTML =  "<div class=\"message right\">"+
-				"<img src=\""+fileUrl+"\" />" +
-				"<div class=\"bubble\">" +
-				text +
-				"</div></div>";
-		setMessageInnerHTML(innerHTML);
-		saveInfo(to,text);
+		/*saveInfo(to,text);*/
 		toBut($('#chat-messages')[0]);
     	var messages={
 			id:$("#id").val(),
 			to:to,
-			message:text
+			message:text,
+			fileUrl:fileUrl
 		}
 		websocket.send(JSON.stringify(messages));
 		$('#messageText').val("");
+		saveInfo(to,text);
 	}
 
 	$("#messageText").keydown(function (e){
@@ -153,7 +134,6 @@
 		if (code == 13){
 			send();
 		}
-
 	});
 
 </script>
