--- a/Joyce/src/main/resources/templates/user/loginPage.html
+++ b/Joyce/src/main/resources/templates/user/loginPage.html
@@ -1,6 +1,7 @@
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
     <title>登录</title>
 </head>
+<div id="loading"></div>
 <div class="container">
     <div class="row row-centered">
         <div class="modal fade" id="forgetPasswordModal"  role="dialog" aria-labelledby="forgetPasswordLabel" aria-hidden="true">
