--- a/Joyce/src/main/resources/templates/common/public/aboutUs.html
+++ b/Joyce/src/main/resources/templates/common/public/aboutUs.html
@@ -5,10 +5,7 @@
     <head class="panelBar" th:replace="/common/public/headerBar::bar"></head>
 </div>
 
-    <div  style="margin-top: 10%" class="col-md-6">
-        <h3 style="width: 20%">请用百度app扫描二维码</h3>
-        <div id="qrcode"></div>
-    </div>
+    <div  id="qrcode" style="margin-top: 10%" ></div>
 
 <input class="title" type="hidden" value="au"/>
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
