--- a/Joyce/src/main/resources/templates/common/public/header.html
+++ b/Joyce/src/main/resources/templates/common/public/header.html
@@ -8,8 +8,8 @@
     <link  rel="stylesheet" th:href="@{/static/css/user/queryUser.css}"/>
     <link  rel="stylesheet" th:href="@{/static/css/common/public/headerBar.css}"/>
     <link  rel="stylesheet" th:href="@{/static/css/user/userList.css}"/>
-    <link  rel="stylesheet" th:href="@{/static/css/menu/menuList.css}"/>
-    <link  rel="stylesheet" th:href="@{/static/css/menu/menuList.css}"/>
+    <!--<link  rel="stylesheet" th:href="@{/static/css/menu/menuList.css}"/>-->
+    <!--<link  rel="stylesheet" th:href="@{/static/css/menu/menuList.css}"/>-->
     <link  rel="stylesheet" th:href="@{/static/css/utils/L2d/L2d.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/utils/toastr/toastr.css}" />
     <meta name="renderer" content="webkit">
