--- a/Joyce/src/main/resources/templates/tools/createCode/getDb.html
+++ b/Joyce/src/main/resources/templates/tools/createCode/getDb.html
@@ -77,9 +77,9 @@
 </div>
 
 <div  class="container-fluid dbs" style="width: 90%;margin-top:5%;margin-left: -3%">
-    <div style="margin-top: 6%;height: 100%;" class="col-md-1 nav">
+    <!--<div style="margin-top: 6%;height: 100%;" class="col-md-1 nav">
         <div  th:replace="/menu/menu::meau_left"></div>
-    </div>
+    </div>-->
     <div class="col-md-11 content">
         <div class="content-body">
             <div id="user_list_div">
