--- a/Joyce/src/main/resources/static/css/common/public/public.css
+++ b/Joyce/src/main/resources/static/css/common/public/public.css
@@ -25,4 +25,9 @@
  }
  body{
      background: url("/static/img/userImg/common.png");
+     background-repeat: no-repeat;
+     background-size: cover;
+ }
+ .regist{
+
  }
