--- a/Joyce/src/main/resources/static/css/common/public/public.css
+++ b/Joyce/src/main/resources/static/css/common/public/public.css
@@ -28,6 +28,8 @@
      background-repeat: no-repeat;
      background-size: cover;
  }
- .regist{
-
+ .loginBtns{
+     justify-content: flex-start;
+     flex-direction: row;
+     display: flex;
  }
