--- a/Joyce/src/main/resources/static/css/error/404.css
+++ b/Joyce/src/main/resources/static/css/error/404.css
@@ -1,6 +1,11 @@
-.head404{ width:580px; height:234px; margin:50px auto 0 auto; background:url(https://www.daixiaorui.com/Public/images/head404.png) no-repeat; }
-
-.txtbg404{ width:499px; height:169px; margin:10px auto 0 auto; background:url(https://www.daixiaorui.com/Public/images/txtbg404.png) no-repeat;}
+body{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url("/static/img/error/404bg.png");
+}
+.head404{ width:580px; height:234px; margin:50px auto 0 auto; background:url(/static/img/error/head404.png) no-repeat; }
+.content{margin:10% auto 0 auto;}
+.txtbg404{ width:499px; height:169px; margin:10px auto 0 auto; background:url(/static/img/error/txtbg.png) no-repeat;}
 
 .txtbg404 .txtbox{ width:390px; position:relative; top:30px; left:60px;color:#eee; font-size:13px;}
 
@@ -11,3 +16,4 @@
 .txtbg404 .txtbox p a { color:#eee; text-decoration:none;}
 
 .txtbg404 .txtbox p a:hover { color:#FC9D1D; text-decoration:underline;}
+
