--- a/Joyce/src/main/resources/static/css/error/500.css
+++ b/Joyce/src/main/resources/static/css/error/500.css
@@ -1,3 +1,12 @@
+body{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url("/static/img/error/404bg.png");
+}
+.head404{ width:580px; height:234px; margin:50px auto 0 auto; background:url(/static/img/error/head404.png) no-repeat; }
+.content{margin:10% auto 0 auto;}
+.txtbg404{ width:499px; height:169px; margin:10px auto 0 auto; background:url(/static/img/error/txtbg.png) no-repeat;}
+
 .head500{ width:580px; height:234px; margin:50px auto 0 auto; }
 
 .txtbg500{ width:499px; height:169px; margin:10px auto 0 auto;}
