--- a/Joyce/src/main/resources/templates/common/error/500.html
+++ b/Joyce/src/main/resources/templates/common/error/500.html
@@ -4,16 +4,16 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>404-对不起！您访问的页面不存在</title>
-    <link rel="stylesheet" th:href="@{/static/css/error/404.css}"/>
+    <title>500-对不起！您访问的页面不存在</title>
+    <link rel="stylesheet" th:href="@{/static/css/error/500.css}"/>
 </head>
 
 <body>
 <div class="content">
-    <div class="head404"></div>
-    <div class="txtbg404">
+    <div class="head500"></div>
+    <div class="txtbg500">
         <div class="txtbox">
-            <p>对不起，您请求的页面不存在、或已被删除、或暂时不可用</p>
+            <p>服务器已经断开...</p>
             <p>》<a style="cursor:pointer" onclick="toMain()">返回主页</a></p>
         </div>
     </div>
