--- a/Joyce/src/main/resources/templates/common/public/header.html
+++ b/Joyce/src/main/resources/templates/common/public/header.html
@@ -20,5 +20,4 @@
     <link rel="shortcut icon" th:href="@{/static/img/logo/favicon.ico}" type="image/x-icon" />
     <title th:replace="${title}"></title>
 </head>
-
-</html>
+<body>
