--- a/Joyce/src/main/resources/templates/common/public/footer.html
+++ b/Joyce/src/main/resources/templates/common/public/footer.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <div th:fragment="footer" xmlns="http://www.w3.org/1999/html">
+  </body>
   <!--公共js-->
   <script type="text/javascript" th:src="@{/static/js/jQuery.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/md5.js}"></script>
@@ -19,17 +20,14 @@
   <script type="text/javascript" th:src="@{/static/js/utils/L2d/L2Dwidget.min.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/utils/L2d/L2Dwidget.0.min.js}"></script>
   <script type="text/javascript">
-L2Dwidget.init({"display": {
-        "superSample": 2,
-        "width": 200,
-        "height": 400,
-        "position": "right",
-        "hOffset": 0,
-        "vOffset": 0}});
+    L2Dwidget.init({"display": {
+            "superSample": 2,
+            "width": 200,
+            "height": 400,
+            "position": "right",
+            "hOffset": 0,
+            "vOffset": 0}});
   </script>
   <!--<script type="text/javascript" th:src="@{/static/js/common/public/main.js}"></script>-->
-    <div style="margin-left: 40%">
-      <p>Copyright ©Joyce</p>
-    </div>
 </div>
 </html>
