--- a/Joyce/src/main/resources/templates/common/public/main.html
+++ b/Joyce/src/main/resources/templates/common/public/main.html
@@ -1,19 +1,88 @@
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
   <title>主页</title>
 </head>
+<link  rel="stylesheet" th:href="@{/static/css/common/public/main.css}"/>
 <div class="log">
     <head class="panelBar" th:replace="/common/public/headerBar::bar"></head>
 </div>
 <div class="headerBar"></div>
- <div style="width: 100%">
+<!-- <div style="width: 100%">
    <div class="container" style="margin:10px auto">
      <canvas id="canBoard"></canvas>
      <button type="button" id="btnConvert" style="width:56.4%" class="btn btn-primary btn-block">祭拜</button>
      <img   style="display:none;height:70%; width:40%"  id="imgTest" />
    </div>
    <audio id="main_music"></audio>
- </div>
+ </div>-->
+
+<canvas id="canvas"></canvas>
+<div class="box">
+        <!-- 图片部分 -->
+        <img class="img2" src="https://timgsa.404v.com/timg?image&quality=80&size=b9999_10000&sec=1568641472&di=9dbacb75cf245d0eb57e757e0d2247f7&imgtype=jpg&er=1&src=http%3A%2F%2Fimg1.doubanio.com%2Fview%2Fphoto%2Fl%2Fpublic%2Fp2290059157.jpg" alt="">
+        <div class="text">
+            <h1>某某安全组</h1>
+
+            <br>
+
+            <span style="color: #0f0">官方Q群：</span><span><a target="view_window" href="https://www.404v.com/">123456</a></span>
+            <br><br>
+
+            <p class="glow" style="color: #f00; font-size:21px;">友情检测，请及时修复</p>
+            <p class="glow" style="color: #f00; font-size:10px;">或联系本人修复</p>
+            <br>
+            <span style="color: #3ee5df">某某某Qq：</span><span><a  style="color: #e5743e;" target="view_window" href="http://wpa.qq.com/msgrd?v=3&uin=49000185&site=qq&menu=yes">123456</a></span>
+            <br><br>
+            <P class="glow">安全之路，永不妥协</P>
+            <br><br><br><br>
+            <div class="yl"><span style="color: #f0f">友情链接：</span><span><a href="https://www.404v.com/">某网站</a></span> <span><a href="https://www.404v.com/">某网站</a></span><span><a href="https://www.404v.com/">某网站</a></span></div>
+
+        </div>
+    </div>
+    <div class="szj">
+
+
+<!-- 音乐部分 -->
+<embed height="0" width="0" src="https://music.163.com/outchain/player?type=2&id=29400926&auto=1&height=66"></embed>
 <input class="title" type="hidden" value="index">
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
-<script type="text/javascript" th:src="@{/static/js/common/public/main.js}"></script>
-</html>
+<script type="text/javascript">
+    var canvas = document.getElementById('canvas');
+    var ctx = canvas.getContext('2d');
+
+
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
+    // 下面的fddsidgnvaieighaodgdg就是代码雨的文字
+    var texts = 'fddsidgnvaieighaodgdg'.split('');
+
+    var fontSize = 16;
+    var columns = canvas.width/fontSize;
+    // 用于计算输出文字时坐标，所以长度即为列数
+    var drops = [];
+    //初始值
+    for(var x = 0; x < columns; x++){
+        drops[x] = 1;
+    }
+
+    function draw(){
+        //让背景逐渐由透明到不透明
+        ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+        //文字颜色
+        ctx.fillStyle = '#0F0';
+        ctx.font = fontSize + 'px arial';
+        //逐行输出文字
+        for(var i = 0; i < drops.length; i++){
+            var text = texts[Math.floor(Math.random()*texts.length)];
+            ctx.fillText(text, i*fontSize, drops[i]*fontSize);
+
+            if(drops[i]*fontSize > canvas.height || Math.random() > 0.95){
+                drops[i] = 0;
+            }
+
+            drops[i]++;
+        }
+    }
+    setInterval(draw, 33);
+</script>
+<!--<script type="text/javascript" th:src="@{/static/js/common/public/main.js}"></script>-->
