--- a/Joyce/src/main/resources/templates/common/public/main.html
+++ b/Joyce/src/main/resources/templates/common/public/main.html
@@ -24,7 +24,7 @@
                     <span>Joyce</span>
                 </div>
                 <div id="text">
-                    <ul></ul>
+                    <ul class="cmd"></ul>
                     <input type="text" name="text" id='in' placeholder="$home:">
                 </div>
         </div>
