--- a/Joyce/src/main/resources/templates/index.html
+++ b/Joyce/src/main/resources/templates/index.html
@@ -4,13 +4,12 @@
 	<link  rel="stylesheet" th:href="@{/static/css/common/public/index.css}">
 	<link  rel="stylesheet" th:href="@{/static/bootstrap-3.4.1/dist/css/bootstrap.css}">
 	<link  rel="stylesheet" th:href="@{/static/bootstrap-3.4.1/dist/css/bootstrap-theme.css}">
-	<link  rel="stylesheet" type="text/css" th:href="@{/static/css/common/public/normalize.css}" />
-	<link  rel="stylesheet" type="text/css" th:href="@{/static/css/common/public/normalize.css}" />
+	<!--<link  rel="stylesheet" type="text/css" th:href="@{/static/css/common/public/normalize.css}" />-->
 	<link  rel="stylesheet" type="text/css" th:href="@{/static/css/common/public/index.css}" />
 	<script th:src="@{/static/js/jQuery.js}"></script>
 	<script th:src="@{/static/js/common/common.js}"></script>
 	<script th:src="@{/static/js/common/public/index.js}"></script>
-	<script th:src="@{/static/js/common/public/stopExecutionOnTimeout.js}"></script>
+	<script th:src="@{/static/js/stopExecutionOnTimeout.js}"></script>
 </head>
 <body>
 	<div id="index_video" class="text-center">
