--- a/Joyce/src/main/resources/templates/main/main.html
+++ b/Joyce/src/main/resources/templates/main/main.html
@@ -51,9 +51,8 @@
 <!-- 音乐部分 -->
 <embed height="0" width="0" src="https://music.163.com/outchain/player?type=2&id=29400926&auto=1&height=66"></embed>
 <input class="title" type="hidden" value="index"/>
-
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
-<script type="text/javascript" th:src="@{/static/js/common/public/main.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/main/main.js}"></script>
 <script type="text/javascript">
     var canvas = document.getElementById('canvas');
     var ctx = canvas.getContext('2d');
