--- a/Joyce/src/main/resources/templates/main/main.html
+++ b/Joyce/src/main/resources/templates/main/main.html
@@ -14,7 +14,7 @@
    </div>
    <audio id="main_music"></audio>
  </div>-->
-<input class="stop" type="text" value="2"/>
+<input class="stop" type="hidden" value="2"/>
 <canvas id="canvas"></canvas>
 <div class="box">
     <div class="screen">
