--- a/Joyce/src/main/resources/templates/main/main2.html
+++ b/Joyce/src/main/resources/templates/main/main2.html
@@ -17,7 +17,7 @@
             <h1 class="intro__title">Joyce App</h1>
             <div class="intro__subtitle">
                 <div class="intro__description">
-                    A gift for a big fool
+                    <h4 class="intro__description__content">A gift for a big fool</h4>
                     <!--<a href="http://instagram.com/danrubin/">Dan Rubin</a>.-->
                     <div class="demos">
                         <a class="demos__item demos__item--current" th:href="@{'/main'}">Simple</a>
@@ -43,7 +43,7 @@
         </div><!-- /intro__content -->
     </header><!-- /intro -->
     <section class="items-wrap">
-        <a href="#" class="item">
+       <!-- <a href="#" class="item">
             <img class="item__image" th:src="@{/static/img/main/item01.jpg}" alt="item01"/>
             <h2 class="item__title">Magnificence</h2>
         </a>
@@ -90,7 +90,7 @@
         <a href="#" class="item">
             <img class="item__image" th:src="@{/static/img/main/item12.jpg}" alt="item12"/>
             <h2 class="item__title">Refreshing</h2>
-        </a>
+        </a>-->
     </section>
     <input class="title" type="hidden" value="index"/>
 </div><!-- /container -->
