--- a/Joyce/src/main/resources/templates/main/main2.html
+++ b/Joyce/src/main/resources/templates/main/main2.html
@@ -43,54 +43,6 @@
         </div><!-- /intro__content -->
     </header><!-- /intro -->
     <section class="items-wrap">
-       <!-- <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item01.jpg}" alt="item01"/>
-            <h2 class="item__title">Magnificence</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item02.jpg}" alt="item02"/>
-            <h2 class="item__title">Electrifying</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item03.jpg}" alt="item03"/>
-            <h2 class="item__title">Dynamic</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item04.jpg}" alt="item04"/>
-            <h2 class="item__title">Crucial</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item05.jpg}" alt="item05"/>
-            <h2 class="item__title">Awe-inspiring</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item06.jpg}" alt="item06"/>
-            <h2 class="item__title">Serene</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item07.jpg}" alt="item07"/>
-            <h2 class="item__title">Vulnerable</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item08.jpg}" alt="item08"/>
-            <h2 class="item__title">Bountiful</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item09.jpg}" alt="item09"/>
-            <h2 class="item__title">Endangered</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item10.jpg}" alt="item10"/>
-            <h2 class="item__title">Beautiful</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item11.jpg}" alt="item11"/>
-            <h2 class="item__title">Inspiring</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item12.jpg}" alt="item12"/>
-            <h2 class="item__title">Refreshing</h2>
-        </a>-->
     </section>
     <input class="title" type="hidden" value="index"/>
 </div><!-- /container -->
@@ -98,6 +50,7 @@
 <input class="title" type="hidden" value="index"/>
 <script type="text/javascript" th:src="@{/static/js/main/html5.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/main/classie.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/main/main2.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/main/modernizr.custom.js}"></script>
 <script>
     (function () {
