--- a/Joyce/src/main/resources/templates/main/main2.html
+++ b/Joyce/src/main/resources/templates/main/main2.html
@@ -19,10 +19,10 @@
                 <div class="intro__description">
                     <h4 class="intro__description__content">A gift for a big fool</h4>
                     <!--<a href="http://instagram.com/danrubin/">Dan Rubin</a>.-->
-                    <div class="demos">
-                        <a class="demos__item demos__item--current" th:href="@{'/main'}">Simple</a>
+            <!--        <div class="demos">
+                        <a class="demos__item demos__item&#45;&#45;current" th:href="@{'/main'}">Simple</a>
                         <a class="demos__item" href="layout-multi.html">Multi</a>
-                    </div>
+                    </div>-->
                 </div>
                 <button class="trigger">
                     <svg width="100%" height="100%" viewBox="0 0 60 60" preserveAspectRatio="none">
@@ -43,54 +43,6 @@
         </div><!-- /intro__content -->
     </header><!-- /intro -->
     <section id="items-wrap" class="items-wrap">
-       <!-- <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item01.jpg}" alt="item01"/>
-            <h2 class="item__title">Magnificence</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item02.jpg}" alt="item02"/>
-            <h2 class="item__title">Electrifying</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item03.jpg}" alt="item03"/>
-            <h2 class="item__title">Dynamic</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item04.jpg}" alt="item04"/>
-            <h2 class="item__title">Crucial</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item05.jpg}" alt="item05"/>
-            <h2 class="item__title">Awe-inspiring</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item06.jpg}" alt="item06"/>
-            <h2 class="item__title">Serene</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item07.jpg}" alt="item07"/>
-            <h2 class="item__title">Vulnerable</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item08.jpg}" alt="item08"/>
-            <h2 class="item__title">Bountiful</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item09.jpg}" alt="item09"/>
-            <h2 class="item__title">Endangered</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item10.jpg}" alt="item10"/>
-            <h2 class="item__title">Beautiful</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item11.jpg}" alt="item11"/>
-            <h2 class="item__title">Inspiring</h2>
-        </a>
-        <a href="#" class="item">
-            <img class="item__image" th:src="@{/static/img/main/item12.jpg}" alt="item12"/>
-            <h2 class="item__title">Refreshing</h2>
-        </a>-->
     </section>
     <input class="title" type="hidden" value="index"/>
 </div><!-- /container -->
