--- a/Joyce/src/main/resources/templates/tools/uEditor/uEditorPage.html
+++ b/Joyce/src/main/resources/templates/tools/uEditor/uEditorPage.html
@@ -43,6 +43,7 @@
       <div class="layui-col-md12">
         <!--博客表单-->
         <form name="mdEditorForm">
+          <input type="button" class="pull-right">
           <div id="article_content_info">
             <textarea id="in_content" name="content"  type="markdown" style="display:none;" th:text="${article.content}"> </textarea>
           </div>
