--- a/Joyce/src/main/resources/templates/user/updateUserPage.html
+++ b/Joyce/src/main/resources/templates/user/updateUserPage.html
@@ -7,6 +7,7 @@
             <img id="display_img" th:src="${user.fileUrl}" width="100px" height="100px" class="img-circle pull-right"/>
             <form class="form-horizontal center-block" role="form"  method="get">
                 <legend>用户修改信息</legend>
+
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="username" >头像</label>
                     <div  class="col-sm-4 " style="margin-right: -9%; width: 15%;">
@@ -14,6 +15,7 @@
                     </div>
                 </div>
                 <input name="id" id="id" type="hidden" th:value="${user.id}">
+                <input name="status" id="status" type="hidden" th:value="${user.status}">
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="username" >用户名</label>
                     <div  class="col-sm-4 ">
