--- a/Joyce/src/main/resources/templates/user/updateUserPage.html
+++ b/Joyce/src/main/resources/templates/user/updateUserPage.html
@@ -1,6 +1,9 @@
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
     <title>用户修改基本信息</title>
 </head>
+<div class="log">
+    <head class="panelBar" th:replace="/common/public/headerBar::bar"></head>
+</div>
 <div class="container">
     <div class="row row-centered">
         <div class="well col-md-6 col-centered">
