--- a/Joyce/src/main/resources/templates/user/addFriendListPage.html
+++ b/Joyce/src/main/resources/templates/user/addFriendListPage.html
@@ -11,3 +11,8 @@
 
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
 <script type="text/javascript" th:src="@{/static/js/user/addFriend.js}"></script>
+<script type="text/javascript">
+    $(document).ready(function (){
+        getApplicationFriendFuc();
+    });
+</script>
