--- a/Joyce/src/main/resources/templates/common/public/covidPage.html
+++ b/Joyce/src/main/resources/templates/common/public/covidPage.html
@@ -48,11 +48,11 @@
                 //  console.log(data.data)
                 var select = $('#select').val();
                 var res = data.data || "";
-                res = JSON.parse(res);
                 var newArr = [];
                 if (res) {
                     //获取到各个省份的数据
                     var province = res.areaTree[0].children;
+                    console.log(province);
                     for (var i = 0; i < province.length; i++) {
                         /*let  bgc =  getbgColor(province[i].total.confirm);*/
                         var json={};
