--- a/Joyce/src/main/resources/templates/user/webrtc.html
+++ b/Joyce/src/main/resources/templates/user/webrtc.html
@@ -4,7 +4,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>WebRTC + WebSocket</title>
+    <title>视频协议</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <style>
         html,body{
