--- a/Joyce/src/main/resources/templates/user/websocketPage.html
+++ b/Joyce/src/main/resources/templates/user/websocketPage.html
@@ -50,6 +50,7 @@
 <input id="websocketUrlPrefix" type="hidden" th:value="${websocketUrlPrefix}">
 
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
+<script type="text/javascript" th:src="@{/static/js/websocket/websocket.js}"></script>
 <script type="text/javascript">
 	//连接对象.
 	//websocketUrlPrefix
