--- a/Joyce/src/main/resources/templates/common/public/headerBar.html
+++ b/Joyce/src/main/resources/templates/common/public/headerBar.html
@@ -24,7 +24,7 @@
               <li><a href="javascript:void(0)" data-toggle="modal" data-target="#editModal"
                      th:onclick="rmUser()">退出登录</a></li>
               <li><a href="javascript:void(0)" data-toggle="modal" data-target="#editModal"
-                     th:onclick="toAddSource()">添加背景</a></li>
+                     th:onclick="toAddSource()">添加资源</a></li>
             <li><a href="javascript:void(0)" data-toggle="modal" data-target="#editModal"
                    th:onclick="toAddFriend()">添加好友</a></li>
           </ul></span>
