--- a/Joyce/src/main/resources/static/css/main/demo.css
+++ b/Joyce/src/main/resources/static/css/main/demo.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Playfair+Display:900|Josefin+Sans:400);
+@import url(./static/css/main/scns.css);
 @font-face {
 	font-weight: normal;
 	font-style: normal;
