--- a/Joyce/src/main/resources/templates/source/sourcePage.html
+++ b/Joyce/src/main/resources/templates/source/sourcePage.html
@@ -21,12 +21,13 @@
                         <input class="form-control" id="pic_source_file" type="file" onchange="uploadSource()"/>
                     </div>
                 </div>
-                <div class="form-group " id="video">
+               <!-- <div class="form-group " id="video">
                     <label class="col-sm-2 control-label" for="pic_source_file">视频资源上传</label>
                     <div class="col-sm-4 " style="margin-right: -9%; width: 15%;">
                         <input class="form-control" id="slice" type="file"/>
                     </div>
-                </div>
+                </div>-->
+                <input type="hidden" id="vUrl"/>
                 <input name="id" id="id" type="hidden">
                 <input id="type" type="hidden">
 
